@@ -6,17 +6,15 @@ import com.aws.jverify.verifier.compiler.ClassCompiler;
 import com.aws.jverify.verifier.compiler.ExpressionCompiler;
 import com.aws.jverify.verifier.compiler.JVerifyIndex;
 import com.aws.jverify.verifier.compiler.JavaToDafnyCompiler;
-import com.sun.source.tree.Tree;
 import com.sun.tools.javac.code.Flags;
 import com.sun.tools.javac.code.Symbol;
-import com.sun.tools.javac.api.JavacTrees;
+import com.sun.tools.javac.code.Symtab;
 import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.tree.TreeInfo;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class RecordCompiler {
     final ClassCompiler classCompiler;
@@ -27,8 +25,7 @@ public class RecordCompiler {
         this.compiler = classCompiler.compiler;
     }
 
-    public IndDatatypeDecl translateValueType(JCTree.JCClassDecl classDecl, IOrigin origin, Name name) {
-        assert classDecl.getKind() == Tree.Kind.RECORD;
+    public TopLevelDeclWithMembers translateValueType(Symbol.ClassSymbol classSymbol, JCTree.JCClassDecl classDecl, IOrigin origin, Name name) {
         if (compiler.isAnnotatedRecursive(classDecl.type, Modifiable.class)) {
             compiler.reportError(origin, "modifiableForbidden", "a record class");
         }
@@ -36,78 +33,37 @@ public class RecordCompiler {
         var typeParams = classCompiler.translateTypeParameters(classDecl.typarams);
 
         Symbol.ClassSymbol currentTypeSymbol = classCompiler.getCurrentTypeSymbol(classDecl);
-        var traits = Stream.concat(Stream.of(currentTypeSymbol.getSuperclass()), currentTypeSymbol
-                .getInterfaces().stream())
+        var traits = currentTypeSymbol
+                .getInterfaces().stream()
                 .filter(compiler::typeHasAContract)
                 .map(baseType -> compiler.translateType(baseType, origin, null))
-                .toList();
+                .collect(Collectors.toList());
+        
+        var superClass = currentTypeSymbol.getSuperclass();
+        if (superClass != null) {
+            Symtab symtab = Symtab.instance(classCompiler.compiler.context);
+            if (superClass.tsym == symtab.objectType.tsym) {
+                traits.addFirst(new UserDefinedType(origin, new NameSegment(origin, JavaToDafnyCompiler.REFERENCE_OR_VALUE_OBJECT_NAME, null)));
+            } else {
+                if (compiler.typeHasAContract(superClass)) {
+                    traits.addFirst(compiler.translateType(superClass, origin, null));
+                }
+            }
+        }
 
         var comps = TreeInfo.recordFields(classDecl);
-        var ctorParams = comps.stream()
-                .map(classCompiler::translateField)
-                .map(field -> new Formal(
-                        field.getOrigin(), field.getNameNode(),
-                        field.getExplicitType(),
-                        false, true,
-                        null, null,
-                        false, false, false,
-                        null
-                ))
-                .toList();
-        var ctors = List.of(new DatatypeCtor(
-                origin,
-                name,
-                null,
-                false,
-                ctorParams
-        ));
-
         var compNames = comps.stream()
                 .map(JCTree.JCVariableDecl::getName)
                 .map(com.sun.tools.javac.util.Name::toString)
                 .collect(Collectors.toSet());
         var members = new ArrayList<MemberDecl>();
+
         List<JCTree.JCVariableDecl> fields = new ArrayList<>();
+        boolean isAbstract = classSymbol.isAbstract();
         for (var member : classDecl.getMembers()) {
-            if (member instanceof JCTree.JCVariableDecl varDecl
-                    && compNames.contains(varDecl.getName().toString())) {
-                fields.add(varDecl);
-            }
-        }
-        for (var member : classDecl.getMembers()) {
-            if (member instanceof JCTree.JCVariableDecl varDecl
-                    && compNames.contains(varDecl.getName().toString()) ) {
-                // Don't translate fields that arise from record components
-                continue;
-            } else if (member instanceof JCTree.JCMethodDecl methodDecl) {
-                // No constructors should be translated:
-                // explicit constructors are not allowed/supported,
-                // and the implicit canonical constructor is unneeded to construct datatype values.
+            if (member instanceof JCTree.JCMethodDecl methodDecl) {
                 if (TreeInfo.isConstructor(methodDecl)) {
-                    String resultName = "resultName";
-                    NameSegment resultReference = new NameSegment(origin, resultName, null);
-                    
-                    boolean isImplicitCanonicalConstructor = isImplicitCanonicalConstructor(methodDecl);
-
-                    var shouldVerify = compiler.verifyAnnotationCompiler.shouldVerify() && !isImplicitCanonicalConstructor;
-                    var dafnyMember = compiler.expressionCompiler.withOverrideTranslateIdentifier(() ->
-                            // Do not generate diagnostics for an implicitly created constructor
-                            // These diagnostics already occur on the fields of the record.        
-                            compiler.withSkipDiagnostics(() -> classCompiler.translateMember(member), isImplicitCanonicalConstructor),
-                            (_, _) -> resultReference);
-
-                    if (dafnyMember instanceof Constructor constructor && (constructor.getBody() == null || !shouldVerify)) {
-                        Type outType = compiler.translateType(classDecl.type, constructor.getOrigin());
-                        Formal result = new Formal(origin, new Name(origin, resultName), outType, false, false, null, null, false, false, false, null);
-                        var staticFunction = new Function(constructor.getOrigin(), constructor.getNameNode(), constructor.getAttributes(), false, null,
-                            constructor.getTypeArgs(), constructor.getIns(), constructor.getReq(), constructor.getEns(), constructor.getReads(), constructor.getDecreases(),
-                        true, false, result, outType, null, null, null);
-                        members.add(staticFunction);
-                    } else {
-                        if (dafnyMember != null) {
-                            compiler.reportError(member, "notSupported", "verified explicit record constructor");
-                        }
-                    }
+                    translateConstructor(classDecl, origin, methodDecl, members);
                     continue;
                 }
                 var methodName = methodDecl.getName().toString();
@@ -124,20 +80,99 @@ public class RecordCompiler {
                     compiler.reportError(member, "notSupported", "overridden hashCode method in record");
                     continue;
                 }
-            }
+            } else if (member instanceof JCTree.JCVariableDecl variableDecl) {
+                fields.add(variableDecl);
+                if (isAbstract) {
+                    Name fieldName = compiler.getName(variableDecl, variableDecl.sym);
+                    var fieldOrigin = compiler.declToOrigin(variableDecl, fieldName);
+                    Type type = compiler.translateType(variableDecl.vartype.type, compiler.toOrigin(variableDecl.vartype), variableDecl.getModifiers());
+                    members.add(new ConstantField(fieldOrigin, fieldName, null, true, type, null, false, false));
+                }
+                continue;
+            } 
             var dafnyMember = classCompiler.translateMember(member);
             if (dafnyMember != null) {
                 members.add(dafnyMember);
             }
         }
 
-        return new IndDatatypeDecl(origin, name, null, typeParams, members, traits, ctors, false);
+        if (isAbstract) {
+            return new TraitDecl(origin, name, null, typeParams, members, traits, false);
+        }
+
+        return new IndDatatypeDecl(origin, name, null, typeParams, members, traits, 
+                List.of(getDatatypeCtor(classDecl, origin, name, fields)), false);
+    }
+
+    private DatatypeCtor getDatatypeCtor(JCTree.JCClassDecl classDecl, IOrigin origin, Name name, List<JCTree.JCVariableDecl> fields) {
+        var ctorParams = fields.stream()
+                .map(classCompiler::translateField)
+                .map(field -> new Formal(
+                        field.getOrigin(), field.getNameNode(),
+                        field.getExplicitType(),
+                        false, true,
+                        null, null,
+                        false, false, false,
+                        null
+                ))
+                .toList();
+        DatatypeCtor ctor = new DatatypeCtor(
+                origin,
+                name,
+                null,
+                false,
+                ctorParams
+        );
+        return ctor;
+    }
+
+    private void translateConstructor(JCTree.JCClassDecl classDecl, IOrigin origin,
+                                      JCTree.JCMethodDecl methodDecl, ArrayList<MemberDecl> members) {
+        if (isImplicitCanonicalConstructor(methodDecl)) {
+            return;
+        }
+        
+        NameSegment resultReference = new NameSegment(origin, NameCompiler.RETURN_VARIABLE_NAME, null);
+
+        java.util.function.BiFunction<JCTree.JCIdent, IOrigin, Expression> handleIdentifierOverride = (identifier, innerOrigin) -> {
+            if (identifier.sym.owner == classDecl.sym) {
+                if (identifier.name == identifier.name.table.names._this) {
+                    return resultReference;
+                } else {
+                    var identName = compiler.nameCompiler.getCompiledName(identifier.sym);
+                    return new ExprDotName(origin, resultReference, compiler.getName(identifier, identName), null);
+                }
+            } else {
+                return compiler.expressionCompiler.translateIdentifierNoOverride(identifier, innerOrigin);
+            }
+        };
+        var shouldVerify = compiler.verifyAnnotationCompiler.shouldVerify();
+
+        var dafnyMember = compiler.expressionCompiler.withOverrideTranslateIdentifier(
+                () -> classCompiler.translateMember(methodDecl),
+            handleIdentifierOverride);
+        
+        if (dafnyMember instanceof Constructor constructor && (constructor.getBody() == null || !shouldVerify)) {
+            Type outType = compiler.translateType(classDecl.type, constructor.getOrigin());
+            Formal result = new Formal(origin, new Name(origin, NameCompiler.RETURN_VARIABLE_NAME), outType, false, false, null, null, false, false, false, null);
+            var staticFunction = new Function(constructor.getOrigin(), constructor.getNameNode(), constructor.getAttributes(), false, null,
+                constructor.getTypeArgs(), constructor.getIns(), constructor.getReq(), constructor.getEns(), constructor.getReads(), constructor.getDecreases(),
+            true, false, result, outType, null, null, null);
+            members.add(staticFunction);
+        } else {
+            if (dafnyMember != null) {
+                compiler.reportError(methodDecl, "notSupported", "verified explicit record constructor");
+            }
+        }
     }
 
     /**
      * Returns whether the declaration is a record's synthetic (implicit) canonical constructor.
      */
     public static boolean isImplicitCanonicalConstructor(JCTree.JCMethodDecl methodDecl) {
+        if (methodDecl == null) {
+            return false;
+        }
         return (methodDecl.mods.flags & Flags.GENERATEDCONSTR) != 0;
     }
 
